# ia-bin-tools

./: .gitignore  COPYING  Makefile.am  README  autogen.sh  bin-search.c  configure.ac  gz-elide-bad-chunks.c  gzip-chunks.c  md5sum.c  whoiz.c
debian/: README.Debian  README.source  changelog  control  copyright  debhelper-build-stamp  files  ia-bin-tools.cron.d.ex  ia-bin-tools.default.ex  ia-bin-tools.doc-base.EX  ia-bin-tools.substvars  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
debian/ia-bin-tools/DEBIAN/: control  md5sums
